@@ -1,3 +1,6 @@
+Aug 29 2013
+    White space visibility settings
+
 Aug 25 2013
     Rename files from Enki, make scripts executable
 
